Remove usage of deprecated method in ftp component
it was reported as warning in the build:
[WARNING]
/home/apupier/git/camel/components/camel-ftp/src/main/java/org/apache/camel/component/file/remote/CamelFTPParserFactory.java:[87,58]
newInstance() in java.lang.Class has been deprecated
[WARNING]
/home/apupier/git/camel/components/camel-ftp/src/main/java/org/apache/camel/component/file/remote/FtpEndpoint.java:[210,19]
setDataTimeout(int) in org.apache.commons.net.ftp.FTPClient has been
deprecated
[WARNING]
/home/apupier/git/camel/components/camel-ftp/src/main/java/org/apache/camel/component/file/remote/FtpsEndpoint.java:[221,19]
setDataTimeout(int) in org.apache.commons.net.ftp.FTPClient has been
deprecated

Signed-off-by: Aurélien Pupier <apupier@ibm.com>